SalesforceGarage/src/objects/QBO_OAuth_Token__c.object
<CustomObject>
    <fields>
        <fullName>QBOAuthService__c</fullName>
        <label>QBOAuthService</label>
        <referenceTo>QBO_OAuthService__c</referenceTo>
        <relationshipName>QBOOAuth_Token</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QBO_Is_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QBO_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QBOOAuth_Token</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QBO_Realm_Id__c</fullName>
        <label>Realm Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QBO_Secret__c</fullName>
        <label>Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QBO_Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QBO OAuth Token</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>QBOOAuth Token Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QBO OAuth Token</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>